--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="screen screen0">
+      <img src="WhatsApp Image 2025-04-18 at 10.18.13_56e0ad3e.jpg" alt="" />
+    </div>
     <div class="screen screen1">
       <h1>I welcome you all to our 2025 Retreat!</h1>
 
