--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Builders Retreat</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="screen screen0">
@@ -17,6 +21,14 @@
         Today, we gather to Revitalize, Renew, and Reconnect with God and each
         other, based on Psalm 51:10-12.
       </p>
+
+      <button>
+        <a
+          href="https://www.biblegateway.com/passage/?search=Psalm+51%3A11&version=KJV"
+        >
+          visit biblegateway</a
+        >
+      </button>
     </div>
     <div class="screen screen2">
       <p>
