--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
       </p>
 
       <button>
-        <a
-          href="https://www.biblegateway.com/passage/?search=Psalm+51%3A11&version=KJV"
-        >
-          visit biblegateway</a
+        <a href="https://www.bible.com/bible/111/JHN.1.NIV">
+          visit youVersion</a
         >
       </button>
     </div>
